--- a/ashton-project0/ashton-project0/ashton-project0.csproj
+++ b/ashton-project0/ashton-project0/ashton-project0.csproj
@@ -6,4 +6,7 @@
     <RootNamespace>ashton_project0</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StoreLibrary\StoreLibrary.csproj" />
+  </ItemGroup>
 </Project>
